{{$NEXT}}

1.302185  2021-05-19 11:08:39-07:00 America/Los_Angeles

    - Fix test from last commit to pass on older perls

1.302184  2021-05-19 09:19:08-07:00 America/Los_Angeles

    - Fix Test::Builder->skip to stringify arguments

1.302183  2020-10-21 20:10:36-07:00 America/Los_Angeles

    - avoid closing over scalar in BEGIN block in cmp_ok eval

1.302182  2020-10-05 22:02:28-07:00 America/Los_Angeles

    - Fix 5.6 support
    - Fix fragile %INC handling in a test

1.302181  2020-09-14 09:46:04-07:00 America/Los_Angeles

    - put try_sig_mask back where it goes (And add test to prevent this in the future)
    - Drop new List::Util requirement back down

1.302180  2020-09-13 23:11:18-07:00 America/Los_Angeles

    - No changes since last trial

1.302179  2020-09-12 22:35:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum List::Util version (for uniq)

1.302178  2020-09-07 14:11:52-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Move try_sig_mask to the only module that uses it.
    - Inherit warnings bitmask in cmp_ok string eval
    - Update copyright date
    - Improved API for interept {} and what it returns

1.302177  2020-08-06 21:46:06-07:00 America/Los_Angeles

    - Minor fix to author downstream test
    - No significant changes since the last trial

1.302176  2020-08-05 21:45:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix Test::More's $TODO inside intercept (#862)

1.302175  2020-04-13 11:37:36-07:00 America/Los_Angeles

    - Fix typos in POD
    - Fix incorrect Test2::Hub documentation
    - Fix test that needed . in @INC on windows
    - Fix Breakage test to show more info

1.302174  2020-03-30 13:55:54-07:00 America/Los_Angeles

    - Fallback if JSON::PP is not available during IPC errors

1.302173  2020-03-27 09:00:16-07:00 America/Los_Angeles

    - Add extra debugging for "Not all files from hub '...' have been collected!"

1.302172  2020-03-08 15:21:25-07:00 America/Los_Angeles

    - Fix transition doc