@@ -680,6 +680,8 @@ sub run_subtest {
         };
     }
 
+    my $start_stamp = time;
+
     my ($ok, $err, $finished);
     T2_SUBTEST_WRAPPER: {
         # Do not use 'try' cause it localizes __DIE__
@@ -695,6 +697,8 @@ sub run_subtest {
             $finished = 1;
         }
     }
+
+    my $stop_stamp = time;
 
     if ($params->{no_fork}) {
         if ($$ != $ctx->trace->pid) {
@@ -746,6 +750,8 @@ sub run_subtest {
         subtest_uuid => $hub->uuid,
         buffered     => $buffered,
         subevents    => \@events,
+        start_stamp  => $start_stamp,
+        stop_stamp   => $stop_stamp,
     );
 
     my $plan_ok = $hub->check_plan;
